# shmem_rpc

./: CMakeLists.txt
cmake/: AddBench.cmake  AddGrpc.cmake  FindGrpc.cmake
srcs/: CMakeLists.txt  bench.cpp  channel.hpp  main.cpp  rpc.proto  shmem_queue.cpp  shmem_queue.hpp  test.cpp
